<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/tvCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course"
        app:layout_constraintTop_toBottomOf="@id/tvStudentName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:textSize="13sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        app:layout_constraintTop_toBottomOf="@id/tvCourse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:textSize="13sp"
        android:paddingBottom="20dp"
        android:textColor="@color/colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>