<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstTimeLoginUser">
    <TextView
        android:id="@+id/suSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_dark"
        android:padding="15dp"
        android:text="@string/skip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLoginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_now"
        android:textStyle="bold"
        android:textColor="@color/gray_dark"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/tvLoginDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_signup_to_continue"
        android:textColor="@color/gray_lite"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginHeader"
        android:layout_marginStart="25dp" />

    <ImageView
        android:id="@+id/lImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_signup"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp">

        <TextView
            android:id="@+id/snTxtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email_address"
            android:textColor="@color/gray_lite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="35dp"/>

        <EditText
            android:id="@+id/snMail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_lite"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_green_outer"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="3dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/snTxtMail"
            />

        <Button
            android:id="@+id/BtnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_green"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="18dp"
            android:text="Get Password"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/snMail"/>

        <TextView
            android:id="@+id/snLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/BtnSignUp"
            android:text="@string/already_started_login_now"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>